update analysis
